--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,16 @@ language: python
 python:
     - "2.6"
     - "2.7"
-# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install:
-    - pip install numpy --use-mirrors
+    - "3.2"
+env:
+    NUMPY_VER=1.6.1
+before_install:
+    - mkdir builds
+    - cd builds
+    - curl -O http://pypi.python.org/packages/source/n/numpy/numpy-${NUMPY_VER}.tar.gz
+    - tar zxf numpy-${NUMPY_VER}.tar.gz
+    - cd numpy-${NUMPY_VER}
+    - python setup.py install
 # command to run tests, e.g. python setup.py test
 script:
     - nosetests nibabel
