--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ before_install:
     - tar zxf numpy-${NUMPY_VER}.tar.gz
     - cd numpy-${NUMPY_VER}
     - python setup.py install
+# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
+install:
+    - python setup.py install
 # command to run tests, e.g. python setup.py test
 script:
-    - nosetests nibabel
+    - cd docs
+    - nosetests ../nibabel
