--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,6 @@ install:
     - python setup.py install
 # command to run tests, e.g. python setup.py test
 script:
-    - cd docs
+    # Change into an innocuous directory to find tests from installation
+    - cd doc
     - nosetests ../nibabel
