--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,14 @@ python:
 env:
     NUMPY_VER=1.6.1
 before_install:
+    - pushd
     - mkdir builds
     - cd builds
     - curl -O http://pypi.python.org/packages/source/n/numpy/numpy-${NUMPY_VER}.tar.gz
     - tar zxf numpy-${NUMPY_VER}.tar.gz
     - cd numpy-${NUMPY_VER}
     - python setup.py install
-    - cd ..
+    - popd
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
     - python setup.py install
