--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,24 @@
 # munges each line before executing it to print out the exit status.  It's okay
 # for it to be on multiple physical lines, so long as you remember: - There
 # can't be any leading "-"s - All newlines will be removed, so use ";"s
+
 language: python
+
 python:
     - 2.6
     - 3.2
     - 3.3
     - 3.4
+
 matrix:
   include:
     - python: 2.7
       env:
         - COVERAGE=--with-coverage
+    - python: 3.4
+      env:
+        - DEPS=minimal
+
 before_install:
     # pydicom <= 0.9.8 doesn't install on python 3
     - if [[ "${TRAVIS_PYTHON_VERSION:0:1}" < "3" ]]; then
@@ -23,16 +30,20 @@ before_install:
       pip install coverage;
       pip install coveralls;
       fi
-# command to install dependencies
-# e.g. pip install -r requirements.txt # --use-mirrors
+    - if [ "${DEPS}" != "minimal" ]; then
+      pip install matplotlib;
+      pip install scipy;
+      fi;
+
 install:
     - python setup.py install
-# command to run tests, e.g. python setup.py test
+
 script:
     # Change into an innocuous directory and find tests from installation
     - mkdir for_testing
     - cd for_testing
     - if [ "${COVERAGE}" == "--with-coverage" ]; then cp ../.coveragerc .; fi
     - nosetests --with-doctest $COVERAGE `python -c "import os; import nibabel; print(os.path.dirname(nibabel.__file__))"`
+
 after_success:
     - if [ "${COVERAGE}" == "--with-coverage" ]; then coveralls; fi
