FIX: Minor fixes

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,9 @@ before_install:
       pip install coverage;
       pip install coveralls;
       fi
+    # We install system matplotlib here to ensure we have the libs we need
     - if [ "${DEPS}" != "minimal" ]; then
+      travis_retry sudo apt-get install gcc gfortran python-dev libblas-dev liblapack-dev cython libatlas-base-dev;
       pip install matplotlib;
       pip install scipy;
       fi;
