--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,12 @@ before_install:
       pip install coverage;
       pip install coveralls;
       fi
+    # Create a (fake) display on Travis so that mpl tests work
+    # TODO: Could also use the `agg` backend instead
     - if [ "${DEPS}" != "minimal" ]; then
       pip install matplotlib;
+      export DISPLAY=:99.0;
+      /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1400x900x24 -ac +extension GLX +render -noreset;
       fi;
 
 install:
