--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,11 @@ before_install:
     # Create a (fake) display on Travis so that mpl tests work
     # TODO: Could also use the `agg` backend instead
     - if [ "${DEPS}" != "minimal" ]; then
-      pip install matplotlib;
+      pip install --no-index -f http://travis-wheels.scikit-image.org numpy scipy matplotlib;
       export DISPLAY=:99.0;
       /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1400x900x24 -ac +extension GLX +render -noreset;
+      else
+      pip install --no-index -f http://travis-wheels.scikit-image.org numpy;
       fi;
 
 install:
