--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "nibabel-data/nitest-balls1"]
 	path = nibabel-data/nitest-balls1
 	url = https://github.com/yarikoptic/nitest-balls1
+[submodule "nibabel-data/rosetta-samples"]
+	path = nibabel-data/rosetta-samples
+	url = https://bitbucket.org/nipy/rosetta-samples.git
